FIX the repository structure

--- a/lab1/src/CV-Lab01.ipynb
+++ b/lab1/src/CV-Lab01.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "7a2cf0a5-a1e5-489a-ba12-fc3b13b4881c",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "image_path = \"images/girl_with_hat.png\"\n",
+    "image_path = \"../images/girl_with_hat.png\"\n",
     "\n",
     "image = cv2.imread(image_path)\n",
     "if image is None:\n",
